# rte-rrtmgp

./: CMakeLists.txt
.github/workflows/: continuous-integration.yml
cmake/: FetchData.cmake
ddq/: CMakeLists.txt  mo_gas_optics_ddq.F90  mo_gas_optics_ddq_kernels.F90
ddq/data-loading-examples/: CMakeLists.txt  mo_gas_optics_ddq_utils.F90  mo_optics_ddq_utils.F90
examples/rfmip-clear-sky/: CMakeLists.txt  rrtmgp_rfmip_lw.F90
examples/rte-examples/: CMakeLists.txt  rte_examples.F90
examples/shared-utils/: mo_simple_netcdf.F90
fjx/: CMakeLists.txt  mo_cloud_optics_fjx.F90  mo_fluxes_fjx.F90  mo_fluxes_fjx_alt.F90  mo_gas_optics_fjx.F90  mo_rte_fjx_interpolation_tables.F90
rrtmgp/: CMakeLists.txt
rrtmgp/frontend/: mo_gas_optics_rrtmgp.F90
rte/kernels/: mo_gas_optics_utils.F90  mo_rte_solver_kernels.F90
